# tesi_tommy

./: pyproject.toml
notebook/: plot.csv  prova.csv  serie.csv  shift_model.ipynb  visualization.ipynb
scripts/: cleaning.py  importing.py
