[tool.poetry]
name = "^"
version = "0.1.0"
description = ""
authors = ["Davide Motta <davide.motta@luxottica.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<=3.11.4, >3.9"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
hyperopt = "^0.2.7"
sklearn = "^0.0.post11"
tensorflow = "^2.15.0"
torch = "^2.1.1"
pathlib = "^1.0.1"
pyarrow = "^14.0.1"
prophet = "^1.1.5"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
